# recentip

./: .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  COMPLIANCE.md  CONTRIBUTING.md  COVERAGE_REPORT.md  Cargo.toml  DESIGN.md  README.md  TODO.md  bacon.toml  build.rs  dylint.toml  sonar-project.properties
.config/: nextest.toml
.github/: copilot-instructions.md
.notes-to-the-agent/: running-the-tests.md  turmoil.md
docs/: internals.md
docs/examples/: monitoring.md  pubsub.md  quickstart.md  rpc.md  transport.md
examples/: README.md  service_monitor.rs  simple_service.rs
scripts/: extract_coverage.py  generate_compliance.py
someip-lints/: Cargo.toml  README.md
someip-lints/src/: lib.rs
spec-data/: coverage.json  requirements-summary.md  requirements.json
src/: builder.rs  client.rs  command.rs  compliance.rs  config.rs  error.rs  examples.rs  handle.rs  internals.rs  lib.rs  lib_old.rs  runtime.rs  sd.rs  server.rs  state.rs  tcp.rs  wire.rs
src/handles/: mod.rs  runtime.rs
src/handles/client/: find.rs  mod.rs  proxy.rs  subscription.rs
src/handles/server/: event.rs  instance.rs  mod.rs  offering.rs  responder.rs
src/net/: mod.rs  tokio_impl.rs  turmoil_impl.rs
src/runtime/: client.rs  client_concurrent.rs  command.rs  event_loop.rs  mod.rs  sd.rs  server.rs  state.rs
tests/: api_tests.rs  api_usage.rs  compliance.rs  helpers.rs  integration.rs  sd_monitoring.rs  simulated.rs  wire.rs
tests/compliance/: api_types.proptest-regressions  api_types.rs  error_handling.rs  error_scenarios.rs  events.rs  fields.rs  instances.rs  integration.rs  message_types.rs  multi_party.rs  multi_protocol.rs  real_network.rs  rpc_flow.rs  sd_pubsub.rs  sd_pubsub_offer_subscribe.rs  service_discovery.rs  service_instance_api.rs  session_edge_cases.rs  session_handling.rs  split_server.rs  subscription.rs  subscription_endpoint_reuse.rs  subscription_multi_instance.rs  tcp_binding.rs  tcp_pubsub.rs  transport_protocol.rs  udp_binding.rs  version_handling.rs  wire_format.rs
tests/compliance/client_behavior/: helpers.rs  mod.rs  offer_filter.rs  rpc_port.rs  subscribe_format.rs  subscribe_nack.rs  subscription_handle.rs
tests/compliance/server_behavior/: event_dedup.rs  helpers.rs  mod.rs  notification_header.rs  offer_timing.rs  sd_session.rs  subscription_nack.rs  transport_mismatch.rs
tests/compliance/wire_format/: helpers.rs  mod.rs  rpc_format.rs  sd_format.rs  subscription_format.rs
tools/: extract_requirements.py
