[package]
name = "someip-runtime"
version = "0.1.0"
edition = "2021"
description = "Type-safe SOME/IP protocol implementation for tokio"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/someip-runtime"
keywords = ["someip", "automotive", "rpc", "async", "tokio"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
turmoil = ["dep:turmoil"]

[dependencies]
tokio = { version = "1", features = ["net", "sync", "time", "rt", "macros", "io-util"] }
bytes = "1"
futures = "0.3"
tracing = "0.1"
socket2 = { version = "0.5", features = ["all"] }
turmoil = { version = "0.7", optional = true }

[dev-dependencies]
proptest = "1.9.0"
turmoil = "0.7"
tokio = { version = "1", features = ["net", "sync", "time", "rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
serial_test = "3"
ctor = "0.4"

[[test]]
name = "api_tests"
path = "tests/api_tests.rs"
required-features = ["turmoil"]
