[package]
name = "someip-runtime"
version = "0.1.0"
edition = "2021"
description = "Type-safe SOME/IP protocol implementation for tokio"
license = "GPL-3.0-only"
repository = "https://github.com/example/someip-runtime"
keywords = ["someip", "automotive", "rpc", "async", "tokio"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["turmoil"]
turmoil = ["dep:turmoil"]

[dependencies]
tokio = { version = "1", features = ["net", "sync", "time", "rt", "macros", "io-util"] }
bytes = "1"
futures = "0.3"
tracing = "0.1"
socket2 = { version = "0.5", features = ["all"] }
turmoil = { version = "0.7", optional = true }

[dev-dependencies]
proptest = "1.9.0"
turmoil = "0.7"
tokio = { version = "1", features = ["net", "sync", "time", "rt", "rt-multi-thread", "macros", "signal"] }
tracing-subscriber = "0.3"
serial_test = "3"
ctor = "0.4"
chrono = "0.4"

[[test]]
name = "api_tests"
path = "tests/api_tests.rs"
required-features = ["turmoil"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Lint groups with lower priority so individual lints can override
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_arguments = "allow"

# Disable doc-related lints for now
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# Deny critical issues
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
indexing_slicing = "warn"
fallible_impl_from = "deny"