[package]
name = "recentip"
version = "0.1.0-alpha.1"
edition = "2021"
description = "An opinionated, type-safe, async SOME/IP implementation for Rust — boring by design, backed by Tokio."
license = "GPL-3.0-only"
repository = "https://github.com/daniel-freiermuth/recentip"
keywords = ["someip", "automotive", "rpc", "async", "tokio"]
categories = ["asynchronous", "network-programming"]
# Include bundled requirements for crate builds (specs submodule not available on crates.io)
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "spec-data/requirements.json",
    "docs/examples/**/*",
]

[features]
default = ["turmoil"]
turmoil = ["dep:turmoil"]
slow-tests = []

[dependencies]
tokio = { version = "1", features = ["net", "sync", "time", "rt", "macros", "io-util"] }
bytes = "1"
futures = "0.3"
tracing = "0.1"
socket2 = { version = "0.5", features = ["all"] }
turmoil = { version = "0.7", optional = true }

[dev-dependencies]
proptest = "1.9.0"
turmoil = "0.7"
tokio = { version = "1", features = ["net", "sync", "time", "rt", "rt-multi-thread", "macros", "signal"] }
tracing-subscriber = "0.3"
test-log = {version = "0.2.19", default-features = false, features = ["trace"]}
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[test]]
name = "api_tests"
path = "tests/api_tests.rs"
required-features = ["turmoil"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Lint groups with lower priority so individual lints can override
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_arguments = "allow"

# Allow for now
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cognitive_complexity = "allow"
doc_markdown = "allow"
format_push_string = "allow"
future_not_send = "allow"
large_stack_arrays = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
needless_pass_by_ref_mut = "allow"
nonminimal_bool = "allow"
return_self_not_must_use = "allow"
significant_drop_in_scrutinee = "allow"
type_complexity = "allow"
too_many_lines = "allow"

# Disable doc-related lints for now
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# Deny critical issues
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"

# Custom profiles for test performance
[profile.max-opt]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.fast-release]
inherits = "release"
opt-level = 2